# E-platform

./: .dockerignore  .env  .sql  Cargo.toml  Dockerfile  README.md  deploy.sh  ecommerce.sql  next.config.mjs  package-lock.json  package.json  s.nginx
.github/workflows/: deploy.yml
ai/: .gitignore  deploy.sh
ai/src/: sql.ts
ai/src/util/: product.ts  retailer.ts
api/: .gitignore  Dockerfile  deploy.sh
api/src/: constant.rs  main.rs
api/src/model/: product.rs
api/src/util/: mod.rs
src/: constant.rs  main.rs  middleware.ts
src/components/: Chat.tsx  Layout.tsx  Login.tsx  Myupload.tsx  RetailerLayout.tsx  Star.tsx
src/components/ep/: Comment.tsx  Comments.tsx  Header.tsx  Product.tsx  ProductDetail.tsx  ProductLayout.tsx  ProductList.tsx  Search.tsx
src/components/product/: Header.tsx
src/components/retailer/: EditProduct.tsx  ProductTable.tsx  RetailerLayout.tsx  SalesGraph.tsx
src/const/: index.ts  retail.ts
src/fetch/: index.ts  product.ts  retailer.ts
src/model/: mod.rs  product.rs  retailer.rs  user.rs
src/mymiddlware/: auth.rs
src/pages/: _app.tsx
src/pages/ep/: index.tsx  login.tsx  product.tsx
src/pages/retailer/: login.tsx  portrait.tsx  (+2 more)
src/route/: product.rs  retailer.rs  user.rs
src/service/: mod.rs  product.rs  upload.rs  user.rs
src/store/: common.ts  context.ts  index.ts  product.ts  products.ts  r.ts  retailer.ts
src/type/: product.ts  retailer.ts
src/util/: mod.rs  retailer.rs
src/utils/: fetch.ts  index.ts  retailer.ts
web/: .env  package-lock.json  package.json  tailwind.config.ts
web/src/: middleware.ts
(+32 files in other folders)
