[package]
name = "platform-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
actix-cors = "0.7.0"
jsonwebtoken = "8"
rust_decimal = "1.36.0"
reqwest = { version = "0.12.8", features = ["json"] }
futures = "0.3"
bytes = "1.5"
actix-multipart = "0.5"
actix-files = "0.6.6"
